src/objects/Committee_Contact_Association__c.object
<CustomObject>
    <fields>
        <fullName>Committees__c</fullName>
        <label>Committees</label>
        <referenceTo>Committees__c</referenceTo>
        <relationshipName>Committee_Contact_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Committee/Contact Associations</relationshipLabel>
        <relationshipName>Committee_Contact_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Joined_Committee__c</fullName>
        <label>Date Joined Committee</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Left_Committee__c</fullName>
        <label>Date Left Committee</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Role__c</fullName>
        <label>Member Role</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>Committee/Contact Association</label>
    <nameField>
        <displayFormat>CO{00000}</displayFormat>
        <label>Committee Contact Association Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Committee/Contact Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>